filestruct/test_data/bad_code/struct_anon.stderr
error: FromDir only supports named fields
 --> test_data/bad_code/struct_anon.rs
  |
  |     struct F(u32, u64);
  |            ^
