filestruct/test_data/bad_code/struct_anon.rs
use filestruct::FromDir;

fn main() {
    #[allow(dead_code)]
    #[derive(FromDir)]
    struct F(u32, u64);
}
